[gd_scene load_steps=17 format=3 uid="uid://bq7pbtdpv3lb"]

[ext_resource type="Script" path="res://Script/orc.gd" id="1_tjhen"]
[ext_resource type="Texture2D" uid="uid://cemflxmvlj6rf" path="res://Asset/Sprites/Orc/Orc-Idle.png" id="2_1ygvu"]
[ext_resource type="Texture2D" uid="uid://c1rdgqu5yvo2u" path="res://Asset/Sprites/Orc/Orc-Walk.png" id="2_drf4l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_ht4at"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_nltry"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_n0s1l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_ecgr3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_p2clo"]
[ext_resource type="Texture2D" uid="uid://4qkhavpcew8d" path="res://Asset/Sprites/Orc/Orc-Attack01.png" id="8_en28a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ed1oi"]
radius = 24.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w13ar"]
radius = 93.6923

[sub_resource type="Animation" id="Animation_4e7cs"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.266667, 0.366667, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_en28a")]
}

[sub_resource type="Animation" id="Animation_2st4n"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1ygvu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.633333, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_kx0ep"]
resource_name = "Move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_drf4l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.333333, 0.466667, 0.566667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_bx4o6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31xnq"]
_data = {
"Attack": SubResource("Animation_4e7cs"),
"Idle": SubResource("Animation_2st4n"),
"Move": SubResource("Animation_kx0ep"),
"RESET": SubResource("Animation_bx4o6")
}

[node name="Orc" type="CharacterBody2D" node_paths=PackedStringArray("state_chart", "attack_timer", "animation_player", "sprite") groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_tjhen")
state_chart = NodePath("StateChart")
attack_timer = NodePath("AttackTimer")
animation_player = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ed1oi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 3)
scale = Vector2(3, 3)
texture = ExtResource("8_en28a")
hframes = 6
frame = 1

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_ht4at")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("4_nltry")

[node name="Behaviour" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_n0s1l")
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("6_ecgr3")

[node name="ToMove" type="Node" parent="StateChart/ParallelState/Behaviour/Attack"]
script = ExtResource("7_p2clo")
to = NodePath("../../Move")
event = &"Move"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behaviour/Attack"]
script = ExtResource("7_p2clo")
to = NodePath("../../Idle")
event = &"Idle"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("6_ecgr3")

[node name="ToMove" type="Node" parent="StateChart/ParallelState/Behaviour/Idle"]
script = ExtResource("7_p2clo")
to = NodePath("../../Move")
event = &"Move"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/ParallelState/Behaviour/Idle"]
script = ExtResource("7_p2clo")
to = NodePath("../../Attack")
event = &"Attack"
delay_in_seconds = "0.0"

[node name="Move" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("6_ecgr3")

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behaviour/Move"]
script = ExtResource("7_p2clo")
to = NodePath("../../Idle")
event = &"Idle"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/ParallelState/Behaviour/Move"]
script = ExtResource("7_p2clo")
to = NodePath("../../Attack")
event = &"Attack"
delay_in_seconds = "0.0"

[node name="Condition" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_n0s1l")
initial_state = NodePath("Normal")

[node name="Damaged" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("6_ecgr3")

[node name="ToNormal" type="Node" parent="StateChart/ParallelState/Condition/Damaged"]
script = ExtResource("7_p2clo")
to = NodePath("../../Normal")
event = &"Normal"
delay_in_seconds = "0.0"

[node name="ToDead" type="Node" parent="StateChart/ParallelState/Condition/Damaged"]
script = ExtResource("7_p2clo")
to = NodePath("../../Dead")
event = &"Dead"
delay_in_seconds = "0.0"

[node name="Normal" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("6_ecgr3")

[node name="ToDamaged" type="Node" parent="StateChart/ParallelState/Condition/Normal"]
script = ExtResource("7_p2clo")
to = NodePath("../../Damaged")
event = &"Damaged"
delay_in_seconds = "0.0"

[node name="Dead" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("6_ecgr3")

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_w13ar")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_31xnq")
}

[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Move" to="." method="_on_move_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Move" to="." method="_on_move_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Condition/Damaged" to="." method="_on_damaged_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Condition/Normal" to="." method="_on_normal_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Condition/Dead" to="." method="_on_death_state_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
